--- a/style.css
+++ b/style.css
@@ -111,4 +111,428 @@ h4 {
     left: 0;
     z-index: 999;
   }
+  .mobile__menu {
+    color: #fff;
+    font-size: 1.3rem;
+    cursor: pointer;
+    display: none;
+  }
   
+  .nav.header__sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: var(--card-bg);
+  }
+  
+  /* hero section style */
+  
+  .hero__wrapper {
+    display: flex;
+    justify-content: space-between;
+    column-gap: 2rem;
+  }
+  
+  .hero__content,
+  .hero__img {
+    width: 50%;
+  }
+  
+  .hero__img img {
+    width: 100%;
+  }
+  
+  .hero__content h2 {
+    font-size: 3rem;
+    line-height: 65px;
+  }
+  
+  .hero__content p {
+    margin-top: 40px;
+  }
+  
+  .hero__btns {
+    display: flex;
+    align-items: center;
+    column-gap: 2rem;
+    margin-top: 40px;
+  }
+  
+  .view__more-btn {
+    padding: 10px 35px;
+    background: var(--primary-color);
+    border-radius: 5px;
+  
+    border: none;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: 600;
+    color: var(--secondary-color);
+  }
+  
+  .play__btn {
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--primary-color);
+    border-radius: 50%;
+    border: 5px solid #689e48;
+    cursor: pointer;
+    box-shadow: 2px 2px 10px -2px #689e48;
+  }
+  
+  .hero__content {
+    padding-top: 40px;
+  }
+  
+  /* popular dishes style */
+  .dishes__section-top {
+    text-align: center;
+    margin-bottom: 50px;
+  }
+  
+  .dishes__section-top h2 {
+    font-size: 2rem;
+    font-weight: 500;
+  }
+  
+  .dishes__wrapper {
+    display: flex;
+    align-items: center;
+    column-gap: 1.5rem;
+  }
+  
+  .dish__item {
+    width: 33%;
+    display: flex;
+    column-gap: 1rem;
+    cursor: pointer;
+    background: var(--card-bg);
+    padding: 20px;
+    border-radius: 5px;
+    transition: 0.3s;
+  }
+  
+  .dish__img {
+    width: 25%;
+  }
+  
+  .dish__img img {
+    width: 100%;
+  }
+  
+  .ratings {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+    margin-bottom: 20px;
+  }
+  
+  .ratings span i {
+    color: var(--primary-color);
+  }
+  
+  .dish__content-bottom {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .dish__price {
+    font-weight: 600;
+    font-size: 1.2rem;
+    color: #fff;
+  }
+  
+  .dish__content {
+    width: 75%;
+  }
+  
+  .add__to-cart {
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--primary-color);
+    color: var(--secondary-color);
+    cursor: pointer;
+    border-radius: 5px;
+  }
+  
+  .add__to-cart i {
+    font-weight: 600;
+  }
+  
+  .dish__item:nth-child(2) .dish__img img,
+  .dish__item:nth-child(3) .dish__img img {
+    width: 150%;
+    margin-left: -15px;
+  }
+  
+  .dish__item:hover {
+    transform: translateY(-1rem);
+  }
+  
+  /* about us section style */
+  .about__wrapper {
+    display: flex;
+    align-items: center;
+    column-gap: 2rem;
+  }
+  
+  .about__img,
+  .about__content {
+    width: 50%;
+  }
+  
+  .about__img img {
+    width: 100%;
+  }
+  
+  .about__content h3 {
+    font-size: 1.7rem;
+    line-height: 50px;
+    margin-bottom: 20px;
+  }
+  
+  .learn__more {
+    margin-top: 40px;
+    padding: 10px 35px;
+    font-size: 1rem;
+    border: none;
+    background: var(--primary-color);
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .learn__more a {
+    color: var(--secondary-color);
+    font-weight: 600;
+  }
+  
+  .item {
+    padding: 20px;
+    background: var(--card-bg);
+    width: 33%;
+    border-radius: 5px;
+  }
+  
+  .item img {
+    width: 100%;
+  }
+  
+  .content-bottom {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .item h4 {
+    font-size: 1.3rem;
+  }
+  
+  .wrapper {
+    display: flex;
+    align-items: center;
+    column-gap: 2rem;
+  }
+  
+  /* menu style */
+  .menu__section-top {
+    margin-bottom: 50px;
+  }
+  
+  .menu__section-top h2 {
+    font-size: 2rem;
+  }
+  
+  .menu__wrapper {
+    display: flex;
+    align-items: center;
+    column-gap: 2rem;
+    row-gap: 2rem;
+  }
+  
+  .menu__item {
+    width: 33%;
+    padding: 20px;
+    background: var(--card-bg);
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .menu__img img {
+    width: 100%;
+  }
+  
+  .menu__card-bottom {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    margin-top: 15px;
+  }
+  
+  .menu__card-bottom .ratings {
+    margin-bottom: 10px;
+  }
+  
+  /* offer section style */
+  .offer__wrapper {
+    display: flex;
+    column-gap: 2rem;
+    align-items: center;
+  }
+  
+  .offer__content,
+  .offer__img {
+    width: 50%;
+  }
+  
+  .offer__img img {
+    width: 100%;
+  }
+  
+  .offer__content h2 {
+    font-size: 2.5rem;
+    line-height: 50px;
+    margin-bottom: 30px;
+  }
+  
+  .offer__content p {
+    margin-bottom: 40px;
+  }
+  
+  /* blog section style */
+  .blog__top {
+    margin-bottom: 50px;
+    text-align: center;
+  }
+  
+  .blog__top h2 {
+    font-size: 2rem;
+  }
+  
+  .blog__wrapper {
+    display: flex;
+    align-items: center;
+    column-gap: 2rem;
+  }
+  
+  .blog__item {
+    width: 33%;
+    border: 1px solid var(--card-bg);
+    border-radius: 5px;
+    padding: 20px;
+  }
+  
+  .blog__img img {
+    width: 100%;
+    border-radius: 5px;
+  }
+  
+  .blog__content h3 {
+    margin-top: 20px;
+    margin-bottom: 10px;
+  }
+  
+  .blog__content p {
+    margin-bottom: 20px;
+  }
+  
+  .read__more {
+    color: var(--primary-color);
+    font-size: 0.9rem;
+    cursor: pointer;
+  }
+  
+  /* footer style */
+  
+  .footer {
+    padding-top: 60px;
+    padding-bottom: 30px;
+    background: var(--card-bg);
+  }
+  .footer__wrapper {
+    display: flex;
+    column-gap: 2rem;
+  }
+  
+  .footer__logo {
+    width: 40%;
+  }
+  
+  .footer__box {
+    width: 15%;
+  }
+  
+  .footer__logo p {
+    margin-top: 15px;
+    margin-bottom: 20px;
+  }
+  
+  .subscribe__box {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 1px solid var(--primary-color);
+    border-radius: 5px;
+    width: 90%;
+  }
+  
+  .subscribe__box input {
+    padding: 15px 7px;
+    border: none;
+    outline: none;
+    background: transparent;
+    color: #acb2b2;
+    font-size: 0.9rem;
+  }
+  
+  .subscribe__box input::placeholder {
+    color: #acb2b2;
+  }
+  
+  .subscribe__btn {
+    padding: 15px 25px;
+    background: var(--primary-color);
+    color: var(--secondary-color);
+    font-size: 1rem;
+    font-weight: 600;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    border-radius: 0px 5px 5px 0px;
+  }
+  
+  .footer__link-title {
+    margin-bottom: 20px;
+  }
+  
+  .footer__menu {
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+  }
+  
+  .footer__link {
+    color: var(--small-text-color);
+    font-size: 0.9rem;
+  }
+  
+  .footer__copyright {
+    text-align: center;
+    margin-top: 50px;
+  }
+  
+  /* animation style */
+  .section {
+    transition: transform 1s, opacity 1s;
+  }
+  
+  .section__hidden {
+    opacity: 0;
+    transform: translateY(8rem);
+  }
