--- a/style.css
+++ b/style.css
@@ -536,3 +536,212 @@ h4 {
     opacity: 0;
     transform: translateY(8rem);
   }
+  /* responsive  */
+
+@media only screen and (max-width: 1024px) {
+    .container {
+      width: 100%;
+    }
+  }
+  
+  @media only screen and (max-width: 768px) {
+    section {
+      padding: 40px 0px;
+    }
+  
+    .nav {
+      width: 100%;
+      height: 50px;
+      line-height: 50px;
+    }
+  
+    .navigation {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: #13252fa8;
+      z-index: 99999;
+      display: none;
+    }
+  
+    .nav__menu {
+      position: absolute;
+      width: 250px;
+      height: 100%;
+      top: 0;
+      right: 0;
+      background: var(--card-bg);
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      z-index: 999999;
+    }
+  
+    .nav__link {
+      font-size: 0.9rem;
+    }
+  
+    .show__menu {
+      display: block;
+    }
+    .mobile__menu {
+      display: block;
+    }
+  
+    .hero__content h2,
+    .offer__content h2 {
+      font-size: 2rem;
+      line-height: 40px;
+    }
+  
+    .dishes__section-top h2,
+    .menu__section-top h2,
+    .blog__top h2 {
+      font-size: 1.5rem;
+    }
+  
+    .dish__content h3 {
+      font-size: 0.9rem;
+    }
+  
+    .dish__price {
+      font-size: 1rem;
+    }
+  
+    .ratings span i {
+      font-size: 0.8rem;
+    }
+  
+    .ratings {
+      margin-bottom: 10px;
+    }
+  
+    .add__to-cart {
+      width: 25px;
+      height: 25px;
+    }
+  
+    .about__content h3 {
+      font-size: 1.4rem;
+      line-height: 35px;
+    }
+    .view__more-btn,
+    .learn__more {
+      padding: 8px 30px;
+      font-size: 0.8rem;
+    }
+  
+    .logo h1 {
+      font-size: 1.2rem;
+    }
+  
+    .menu__item h3 {
+      font-size: 1rem;
+    }
+  
+    .menu__card-bottom {
+      margin-top: 0;
+    }
+  
+    .blog__content h3 {
+      font-size: 1rem;
+    }
+  
+    .blog__content p {
+      line-height: 25px;
+      font-size: 0.8rem;
+    }
+  
+    .blog__item {
+      padding: 0;
+      border: none;
+    }
+  
+    .footer__logo {
+      width: 100%;
+    }
+  
+    .footer__wrapper {
+      flex-wrap: wrap;
+      row-gap: 2rem;
+    }
+  
+    .footer__box {
+      width: 30%;
+    }
+  
+    .footer__logo input {
+      padding: 8px;
+      font-size: 0.8rem;
+    }
+  
+    .subscribe__box {
+      width: 100%;
+    }
+  
+    .subscribe__btn {
+      padding: 8px 30px;
+      font-size: 0.8rem;
+    }
+  
+    .footer__link-title {
+      font-size: 1rem;
+    }
+  
+    .footer__link {
+      font-size: 0.8rem;
+    }
+  
+    .footer__copyright {
+      font-size: 0.8rem;
+    }
+  }
+  
+  @media only screen and (max-width: 576px) {
+    .hero__content,
+    .hero__img,
+    .about__content,
+    .about__img,
+    .offer__content,
+    .offer__img {
+      width: 100%;
+    }
+  
+    .hero__wrapper,
+    .about__wrapper,
+    .offer__wrapper {
+      flex-wrap: wrap;
+    }
+  
+    .hero__content {
+      padding-top: 0;
+      margin-bottom: 40px;
+    }
+  
+    .dish__item,
+    .menu__item,
+    .blog__item {
+      width: 100%;
+    }
+  
+    .dishes__wrapper {
+      flex-wrap: wrap;
+      row-gap: 1.5rem;
+    }
+  
+    .menu__wrapper,
+    .blog__wrapper {
+      flex-wrap: wrap;
+      row-gap: 1.5rem;
+    }
+  
+    .offer__content {
+      margin-bottom: 40px;
+    }
+  
+    .footer__box {
+      width: 45%;
+    }
+  }
